# norsk_tipping_review

./: .gitignore  README.md  pyproject.toml
norsk_tipping_review/: fetch_norsk_tipping.ipynb  fetch_review_data.ipynb  merge_norsk_tipping_and_fplreview.ipynb
norsk_tipping_review/.ipynb_checkpoints/: fetch_norsk_tipping-checkpoint.ipynb
norsk_tipping_review/data/: example_review.html  nt_example_review.html  nt_full.html  nt_full_060124.html
