[tool.poetry]
name = "norsk-tipping-review"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.1"
jupyterlab = "^4.0.6"
beautifulsoup4 = "^4.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
